- fonts: acumin-pro - prevent coping text & images - one of page: move videos to top of sections - noStretchImage: adding default styles

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -27,3 +27,11 @@ $media-large: 1000px;
     -o-transition: $property;
     transition: $property;
 }
+
+@mixin user-select($property) {
+    -webkit-user-select: $property;
+    -moz-user-select: $property;
+    -ms-user-select: $property;
+    -o-user-select: $property;
+    user-select: $property;
+}
