--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -249,6 +249,7 @@ h1 {
     text-rendering: optimizeLegibility;
     font-size: 1.8rem;
     line-height: 1.1;
+    @include user-select(none);
 }
 
 h2 {
@@ -268,6 +269,7 @@ h2 {
     text-rendering: optimizeLegibility;
     font-size: 1.5rem;
     line-height: 1.1;
+    @include user-select(none);
 }
 h3 {
     margin-left: 0;
@@ -285,6 +287,7 @@ h3 {
     text-rendering: optimizeLegibility;
     font-size: 1.3333rem;
     line-height: 1.1;
+    @include user-select(none);
 }
 h4 {
     margin-left: 0;
@@ -302,6 +305,7 @@ h4 {
     text-rendering: optimizeLegibility;
     font-size: 1.2rem;
     line-height: 1.1;
+    @include user-select(none);
 }
 h5 {
     margin-left: 0;
@@ -405,6 +409,7 @@ p {
     padding-right: 0;
     padding-top: 0;
     margin-bottom: 1.45rem;
+    @include user-select(none);
 }
 figure {
     margin-left: 0;
