--- a/src/styles/one-of.module.scss
+++ b/src/styles/one-of.module.scss
@@ -1,7 +1,10 @@
+@import 'base';
+
 .caption {
     line-height: 1.5em;
     font-size: 0.8em;
     color: grey;
     margin-top: -1rem;
     margin-bottom: 1.45rem;
+    @include user-select(none);
 }
